[gd_scene load_steps=12 format=3 uid="uid://bb7uoc3ovlo8i"]

[ext_resource type="PackedScene" uid="uid://bb7seqblyty6j" path="res://Personajes/personajes.tscn" id="1_oagu3"]
[ext_resource type="Script" uid="uid://c3qup426isnv4" path="res://Personajes/Enemies/cerdo_enemy.gd" id="2_337pu"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_teds6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_337pu"]
size = Vector2(23, 21)

[sub_resource type="Animation" id="Animation_mr5gl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}

[sub_resource type="Animation" id="Animation_h41v1"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_ot65d"]
resource_name = "idle"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_pp2b7"]
resource_name = "runAngry"
length = 1.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_nboef"]
resource_name = "walk"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mr5gl"]
_data = {
&"RESET": SubResource("Animation_mr5gl"),
&"hurt": SubResource("Animation_h41v1"),
&"idle": SubResource("Animation_ot65d"),
&"runAngry": SubResource("Animation_pp2b7"),
&"walk": SubResource("Animation_nboef")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ot65d"]
size = Vector2(28, 21)

[node name="CerdoEnemy" groups=["enemigo"] instance=ExtResource("1_oagu3")]
script = ExtResource("2_337pu")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_teds6")
hframes = 9
vframes = 6
frame = 28

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_337pu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_mr5gl")
}
autoplay = "idle"

[node name="LimitRayCast" type="Node2D" parent="." index="3"]

[node name="RayCast2DGround" type="RayCast2D" parent="LimitRayCast" index="0"]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="RayCast2DWall" type="RayCast2D" parent="LimitRayCast" index="1"]
target_position = Vector2(-20, 0)
collision_mask = 4

[node name="RayCastPlayerDetector" type="RayCast2D" parent="LimitRayCast" index="2"]
target_position = Vector2(-50, 0)

[node name="Damage" type="Node2D" parent="." index="4"]

[node name="RayCast2D" type="RayCast2D" parent="Damage" index="0"]

[node name="dmgPlayer" type="Area2D" parent="." index="5"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ot65d")

[connection signal="body_entered" from="dmgPlayer" to="." method="_on_dmg_player_body_entered"]
